common-setup/03_instances/user-template/namespace-istio-system.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: USER_NAME_PLACEHOLDER-istio-system
